# Copyright 2022 The ANGLE Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../../gni/angle.gni")

metal_backend_dir = "$angle_root/src/libANGLE/renderer/metal"
metal_backend_sources = [
  "$metal_backend_dir/BufferMtl.h",
  "$metal_backend_dir/BufferMtl.mm",
  "$metal_backend_dir/CompilerMtl.h",
  "$metal_backend_dir/CompilerMtl.mm",
  "$metal_backend_dir/ContextMtl.h",
  "$metal_backend_dir/ContextMtl.mm",
  "$metal_backend_dir/DeviceMtl.h",
  "$metal_backend_dir/DeviceMtl.mm",
  "$metal_backend_dir/DisplayMtl.h",
  "$metal_backend_dir/DisplayMtl.mm",
  "$metal_backend_dir/DisplayMtl_api.h",
  "$metal_backend_dir/FrameBufferMtl.h",
  "$metal_backend_dir/FrameBufferMtl.mm",
  "$metal_backend_dir/IOSurfaceSurfaceMtl.h",
  "$metal_backend_dir/IOSurfaceSurfaceMtl.mm",
  "$metal_backend_dir/ImageMtl.h",
  "$metal_backend_dir/ImageMtl.mm",
  "$metal_backend_dir/ProgramMtl.h",
  "$metal_backend_dir/ProgramMtl.mm",
  "$metal_backend_dir/ProvokingVertexHelper.h",
  "$metal_backend_dir/ProvokingVertexHelper.mm",
  "$metal_backend_dir/QueryMtl.h",
  "$metal_backend_dir/QueryMtl.mm",
  "$metal_backend_dir/RenderBufferMtl.h",
  "$metal_backend_dir/RenderBufferMtl.mm",
  "$metal_backend_dir/RenderTargetMtl.h",
  "$metal_backend_dir/RenderTargetMtl.mm",
  "$metal_backend_dir/SamplerMtl.h",
  "$metal_backend_dir/SamplerMtl.mm",
  "$metal_backend_dir/ShaderMtl.h",
  "$metal_backend_dir/ShaderMtl.mm",
  "$metal_backend_dir/SurfaceMtl.h",
  "$metal_backend_dir/SurfaceMtl.mm",
  "$metal_backend_dir/SyncMtl.h",
  "$metal_backend_dir/SyncMtl.mm",
  "$metal_backend_dir/TextureMtl.h",
  "$metal_backend_dir/TextureMtl.mm",
  "$metal_backend_dir/TransformFeedbackMtl.h",
  "$metal_backend_dir/TransformFeedbackMtl.mm",
  "$metal_backend_dir/VertexArrayMtl.h",
  "$metal_backend_dir/VertexArrayMtl.mm",
  "$metal_backend_dir/mtl_buffer_manager.h",
  "$metal_backend_dir/mtl_buffer_manager.mm",
  "$metal_backend_dir/mtl_buffer_pool.h",
  "$metal_backend_dir/mtl_buffer_pool.mm",
  "$metal_backend_dir/mtl_command_buffer.h",
  "$metal_backend_dir/mtl_command_buffer.mm",
  "$metal_backend_dir/mtl_common.h",
  "$metal_backend_dir/mtl_common.mm",
  "$metal_backend_dir/mtl_context_device.h",
  "$metal_backend_dir/mtl_context_device.mm",
  "$metal_backend_dir/mtl_default_shaders_compiled.inc",
  "$metal_backend_dir/mtl_format_table_autogen.mm",
  "$metal_backend_dir/mtl_format_utils.h",
  "$metal_backend_dir/mtl_format_utils.mm",
  "$metal_backend_dir/mtl_glslang_mtl_utils.h",
  "$metal_backend_dir/mtl_glslang_mtl_utils.mm",
  "$metal_backend_dir/mtl_occlusion_query_pool.h",
  "$metal_backend_dir/mtl_occlusion_query_pool.mm",
  "$metal_backend_dir/mtl_render_utils.h",
  "$metal_backend_dir/mtl_render_utils.mm",
  "$metal_backend_dir/mtl_resource_spi.h",
  "$metal_backend_dir/mtl_resources.h",
  "$metal_backend_dir/mtl_resources.mm",
  "$metal_backend_dir/mtl_state_cache.h",
  "$metal_backend_dir/mtl_state_cache.mm",
  "$metal_backend_dir/mtl_utils.h",
  "$metal_backend_dir/mtl_utils.mm",
  "$metal_backend_dir/shaders/constants.h",
  "$metal_backend_dir/shaders/format_autogen.h",
  "$metal_backend_dir/shaders/mtl_default_shaders_src_autogen.inc",
  "$metal_backend_dir/shaders/rewrite_indices_shared.h",
]
